--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "icc-travis"]
 	path = icc-travis
-	url = git@github.com:nemequ/icc-travis.git
+	url = https://github.com/nemequ/icc-travis.git
