--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ notifications:
     email: false
 
 script:
-    - ./install-julia.sh release-0.3
+    - ./install-julia.sh
     - julia test/simple.jl
